# rust9x-sample

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  justfile
.cargo/: config.toml
src/: main.rs
